# clibgame

./: ;  CMakeLists.txt  README.md  uninstall.sh
doc/: clibgame-res.md  pak.md
src/: Findclibgame.cmake  clibgame.hpp  pakker.cpp
src/clibgame/: all.hpp  components.hpp  delta.cpp  delta.hpp  ecp.cpp  ecp.hpp  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp  engineconfig.cpp  engineconfig.hpp  eventing.cpp  eventing.hpp  renderer.hpp  res.cpp  res.hpp  timer.cpp  timer.hpp
src/clibgame/components/: position.cpp  position.hpp
src/clibgame/core/: all.hpp  debug.cpp  debug.hpp  pak.cpp  pak.hpp  uuid.cpp  uuid.hpp
src/clibgame/graphics/: animation.hpp
src/clibgame/res/: all.hpp  animation.cpp  animation.hpp  font.cpp  font.hpp  manager.cpp  manager.hpp  resource.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  texable.hpp  texsheet.cpp  texsheet.hpp  texture.cpp  texture.hpp
test/: CMakeLists.txt  README.md
test/cmake/: Findclibgame.cmake
test/res/: assetspec.txt  fontshader.frag  fontshader.vert  test.vert
test/src/: game.cpp  game.hpp  main.cpp  renderer.cpp  renderer.hpp  rendering.cpp  rendering.hpp
